--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1815,6 +1815,17 @@
   timestamp = {2023.10.08},
 }
 
+@PhdThesis{Amalvy2024,
+  author      = {Amalvy, A.},
+  title       = {Natural Language Processing for the Representation of Narrative Texts through Character Networks},
+  year        = {2024},
+  type        = {PhD Thesis},
+  institution = {Avignon Université},
+  owner       = {Vincent},
+  timestamp   = {2021.06.19},
+  url         = {https://hal.science/tel-04860185/},
+}
+
 @Article{Amalvy2024a,
   author    = {Amalvy, A. and Labatut, V. and Dufour, R.},
   title     = {Renard: A Modular Pipeline for Extracting Character Networks from Narrative Texts},
@@ -2054,6 +2065,17 @@
   url       = {https://igm.univ-mlv.fr/~gambette/2010AmstutzGambette.pdf},
 }
 
+@InProceedings{An2018,
+  author    = {An, J. and Kwak, H. and Ahn, Y.-Y.},
+  title     = {SemAxis: A Lightweight Framework to Characterize Domain-Specific Word Semantics Beyond Sentiment},
+  booktitle = {56th Annual Meeting of the Association for Computational Linguistics},
+  year      = {2018},
+  pages     = {2450-2461},
+  doi       = {10.18653/v1/p18-1228},
+  owner     = {Vincent},
+  timestamp = {2025.01.13},
+}
+
 @InProceedings{Anand2011,
   author    = {Anand, P. and Walker, M. and Abbott, R. and Fox Tree, J. E. and Bowmani, R. and Minor, M.},
   title     = {Cats rule and dogs drool!: classifying stance in online debate},
@@ -2184,6 +2206,19 @@
   doi       = {10.4018/978-1-7998-6605-3},
   owner     = {Vincent},
   timestamp = {2024.04.27},
+}
+
+@Article{Andrejevic2008,
+  author    = {Andrejevic, M.},
+  title     = {Watching Television Without Pity: The Productivity of Online Fans},
+  journal   = {Television \& New Media},
+  year      = {2008},
+  volume    = {9},
+  number    = {1},
+  pages     = {24-46},
+  doi       = {10.1177/1527476407307241},
+  owner     = {Vincent},
+  timestamp = {2025.01.13},
 }
 
 @Article{Andresen2022,
@@ -4062,6 +4097,18 @@
   owner     = {Vincent},
   timestamp = {2023.03.23},
   url       = {https://www.worldcat.org/fr/title/social-networks/oclc/533499},
+}
+
+@Article{Barnes2015,
+  author    = {Barnes, J. L.},
+  title     = {Fanfiction as imaginary play: What fan-written stories can tell us about the cognitive science of fiction},
+  journal   = {Poetics},
+  year      = {2015},
+  volume    = {48},
+  pages     = {69-82},
+  doi       = {10.1016/j.poetic.2014.12.004},
+  owner     = {Vincent},
+  timestamp = {2025.01.13},
 }
 
 @Article{Barnett1948,
@@ -8693,6 +8740,19 @@
   timestamp = {2023.08.12},
 }
 
+@Article{Brottrager2023,
+  author    = {Brottrager, J. and Doat, J. and Häußler, J. and Weitin, T.},
+  title     = {Character Shifts in Harry Potter Fanfiction},
+  journal   = {Zeitschrift für Literaturwissenschaft und Linguistik},
+  year      = {2023},
+  volume    = {53},
+  number    = {3},
+  pages     = {623-654},
+  doi       = {10.1007/s41244-023-00310-5},
+  owner     = {Vincent},
+  timestamp = {2025.01.13},
+}
+
 @Article{Brown1961,
   author    = {Brown, R. and Ford, M.},
   title     = {Address in american english},
@@ -10627,6 +10687,16 @@
   timestamp = {2019.04.10},
 }
 
+@Book{Caughey1984,
+  title     = {Imaginary Social Worlds: A Cultural Approach},
+  publisher = {University of Nebraska Press},
+  year      = {1984},
+  author    = {Caughey, J. L.},
+  owner     = {Vincent},
+  timestamp = {2025.01.13},
+  url       = {https://books.google.ie/books/?id=Vi23AAAAIAAJ},
+}
+
 @Article{Cavalli-Sforza1967,
   author    = {Cavalli-Sforza, L. L. and Edwards, A. W. F.},
   title     = {Phylogenetic Analysis: Models and Estimation Procedures},
@@ -11705,6 +11775,17 @@
   doi       = {10.22148/001c.11652},
   owner     = {Vincent},
   timestamp = {2023.09.26},
+}
+
+@InProceedings{Cheng2023,
+  author    = {Cheng, M. and Piccardi, T. and Yang, D.},
+  title     = {CoMPosT: Characterizing and Evaluating Caricature in LLM Simulations},
+  booktitle = {Proceedings of the 2023 Conference on Empirical Methods in Natural Language Processing},
+  year      = {2023},
+  pages     = {10853-10875},
+  doi       = {10.18653/v1/2023.emnlp-main.669},
+  owner     = {Vincent},
+  timestamp = {2025.01.13},
 }
 
 @Article{Cherifi2019,
@@ -22421,6 +22502,18 @@
   timestamp = {2012.06.26},
 }
 
+@Book{Georgakopoulou2007,
+  title     = {Small stories, interaction and identities},
+  publisher = {John Benjamins},
+  year      = {2007},
+  author    = {Georgakopoulou, A.},
+  volume    = {8},
+  series    = {Studies in narrative},
+  owner     = {Vincent},
+  timestamp = {2025.01.13},
+  url       = {https://benjamins.com/catalog/sin.8?srsltid=AfmBOoo7Nxwpo4vw1H8JKvrto0N4LUfnn9JM0pCfRgeyW-FAJblyxTvQ},
+}
+
 @Book{Gerdes2015,
   title     = {Illuminating Dark Networks: The Study of Clandestine Groups and Organizations},
   publisher = {Cambridge University Press},
@@ -26959,6 +27052,16 @@
   url       = {https://www.press.uchicago.edu/ucp/books/book/distributed/N/bo3628818.html},
 }
 
+@Book{Herman2009,
+  title     = {Basic Elements of Narrative},
+  publisher = {Wiley},
+  year      = {2009},
+  author    = {Herman, David},
+  doi       = {10.1002/9781444305920},
+  owner     = {Vincent},
+  timestamp = {2025.01.13},
+}
+
 @InCollection{Herman2018,
   author    = {Herman, P. C.},
   title     = {``Still Paying, Still to Owe'': Credit, Community, and Small Data in Shakespeare and Milton},
@@ -27242,6 +27345,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1093/sysbio/42.2.182},
   owner     = {Vincent},
   timestamp = {2021.09.21},
+}
+
+@Book{Hills2002,
+  title     = {Fan cultures},
+  publisher = {Routledge},
+  year      = {2002},
+  author    = {Hills, M.},
+  series    = {Sussex studies in culture and communication},
+  owner     = {Vincent},
+  timestamp = {2025.01.13},
+  url       = {https://www.routledge.com/Fan-Cultures/Hills/p/book/9780415240253?srsltid=AfmBOopjkVsUWx_AxApM0cZ4slfUB-cyLBya0TJNKbdMjYHRYhgSlY8Q},
 }
 
 @Article{Hills2012,
@@ -30124,6 +30238,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1057/9781403979155},
   owner     = {Vincent},
   timestamp = {2019.03.31},
+}
+
+@Book{Jenkins1992,
+  title     = {Textual Poachers: Television Fans \& Participatory Culture},
+  publisher = {Routledge},
+  year      = {1992},
+  author    = {Jenkins, H.},
+  owner     = {Vincent},
+  timestamp = {2025.01.13},
+  url       = {https://www.routledge.com/Textual-Poachers-Television-Fans-and-Participatory-Culture/Jenkins/p/book/9780415533294?srsltid=AfmBOoqGUbbaJfGWRQRG3FGVIBPna_N1O88Mnyb_i0c3zLs7c16xUrtW},
 }
 
 @Book{Jenkins2014,
@@ -34087,6 +34211,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   url       = {https://www.ucpress.edu/book/9780520221383/overhearing-film-dialogue},
 }
 
+@Article{Kozlowski2019,
+  author    = {Kozlowski, A. C. and Taddy, M. and Evans, J. A.},
+  title     = {The Geometry of Culture: Analyzing the Meanings of Class through Word Embeddings},
+  journal   = {American Sociological Review},
+  year      = {2019},
+  volume    = {84},
+  number    = {5},
+  pages     = {905-949},
+  doi       = {10.1177/0003122419877135},
+  owner     = {Vincent},
+  timestamp = {2025.01.13},
+}
+
 @Article{Krackhardt1987,
   author    = {Krackhardt, D.},
   title     = {Cognitive social structures},
@@ -36735,6 +36872,16 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2023.08.11},
 }
 
+@Article{Lee2022b,
+  author    = {Lee, J. H. and Santero, N. and Bhattacharya, A. and May, E. and Spiro, E. S.},
+  title     = {Community-based strategies for combating misinformation: Learning from a popular culture fandom},
+  journal   = {Harvard Kennedy School Misinformation Review},
+  year      = {2022},
+  doi       = {10.37016/mr-2020-105},
+  owner     = {Vincent},
+  timestamp = {2025.01.13},
+}
+
 @InCollection{Leerssen2019,
   author    = {Leerssen, J.},
   title     = {National drama and national theatre},
@@ -36850,6 +36997,17 @@ https://hkim1596.github.io/shakespearean_character_network},
   doi       = {10.1207/s15516709cog0504_1},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+}
+
+@Article{Lei2024,
+  author    = {Lei, B. and Wu, Z. and Yang, H.},
+  title     = {Uncovering accessible narration underpinning adaption of Literary Novels based on character network},
+  journal   = {International Journal of Modern Physics C},
+  year      = {2024},
+  volume    = {in press},
+  doi       = {10.1142/s0129183125500202},
+  owner     = {Vincent},
+  timestamp = {2024.12.20},
 }
 
 @Article{Leimdorfer1995,
@@ -39555,6 +39713,17 @@ https://hkim1596.github.io/shakespearean_character_network},
   doi       = {10.18653/v1/2021.nuse-1.5},
   owner     = {Vincent},
   timestamp = {2024.07.13},
+}
+
+@InProceedings{Lucy2022,
+  author    = {Lucy, L. and Tadimeti, D. and Bamman, D.},
+  title     = {Discovering Differences in the Representation of People using Contextualized Semantic Axes},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2022},
+  pages     = {3477-3494},
+  doi       = {10.18653/v1/2022.emnlp-main.228},
+  owner     = {Vincent},
+  timestamp = {2025.01.13},
 }
 
 @InProceedings{LuczakRoesch2015,
@@ -44164,6 +44333,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2022.08.31},
 }
 
+@Article{Monroe2008,
+  author    = {Monroe, B. L. and Colaresi, M. P. and Quinn, K. M.},
+  title     = {Fightin’ Words: Lexical Feature Selection and Evaluation for Identifying the Content of Political Conflict},
+  journal   = {Political Analysis},
+  year      = {2008},
+  volume    = {16},
+  number    = {4},
+  pages     = {372-403},
+  doi       = {10.1093/pan/mpn018},
+  owner     = {Vincent},
+  timestamp = {2025.01.13},
+}
+
 @Article{Montanari2010,
   author    = {Montanari, A. and Saberi, A.},
   title     = {The spread of innovations in social networks},
@@ -47274,6 +47456,16 @@ https://hkim1596.github.io/shakespearean_character_network},
   url       = {https://www.peterlang.com/view/title/58072},
 }
 
+@Book{Ochs2009,
+  title     = {Living Narrative: Creating Lives in Everyday Storytelling},
+  publisher = {Harvard University Press},
+  year      = {2009},
+  author    = {Ochs, E. and Capps, L.},
+  doi       = {10.2307/j.ctv2d7x4pr},
+  owner     = {Vincent},
+  timestamp = {2025.01.13},
+}
+
 @Article{OConnell1990,
   author    = {O'Connell, D. C. and Kowal, S. and Kaltenbacher, E.},
   title     = {Turn-taking: A critical analysis of the research tradition},
@@ -48064,6 +48256,29 @@ https://hkim1596.github.io/shakespearean_character_network},
   owner       = {Vincent},
   timestamp   = {2012.08.24},
   url         = {http://ilpubs.stanford.edu:8090/422/},
+}
+
+@Book{Page2011,
+  title     = {New Narratives: Stories and Storytelling in the Digital Age},
+  publisher = {University of Nebraska Press},
+  year      = {2011},
+  author    = {Page, R. and Thomas, B.},
+  series    = {Frontiers of Narrative},
+  doi       = {10.2307/j.ctt1df4h49},
+  owner     = {Vincent},
+  timestamp = {2025.01.13},
+}
+
+@Book{Page2012,
+  title     = {Stories and social media: identities and interaction},
+  publisher = {Routledge},
+  year      = {2012},
+  author    = {Page, R. E.},
+  volume    = {3},
+  series    = {Routledge studies in sociolinguistics},
+  owner     = {Vincent},
+  timestamp = {2025.01.13},
+  url       = {https://www.routledge.com/Stories-and-Social-Media-Identities-and-Interaction/Page/p/book/9780415837026?srsltid=AfmBOoqeM2uwzgbqnM0BGpb6wMzp1gSqXFhxPN_1WjTFtMJWM-DeVIXz},
 }
 
 @InProceedings{Pagel2020,
@@ -50000,6 +50215,17 @@ https://hkim1596.github.io/shakespearean_character_network},
   owner     = {Vincent},
   timestamp = {2021.11.17},
   url       = {https://txtlab.org/wp-content/uploads/2021/11/Piper_DetectingNarrativity_2021.pdf},
+}
+
+@InProceedings{Piper2021b,
+  author    = {Piper, A. and So, R. J. and Bamman, D.},
+  title     = {Narrative Theory for Computational Narrative Understanding},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2021},
+  pages     = {298-311},
+  doi       = {10.18653/v1/2021.emnlp-main.26},
+  owner     = {Vincent},
+  timestamp = {2025.01.13},
 }
 
 @InProceedings{Piper2024,
@@ -53609,6 +53835,20 @@ https://hkim1596.github.io/shakespearean_character_network},
   doi       = {10.4324/9780203075944-88},
   owner     = {Vincent},
   timestamp = {2021.06.21},
+}
+
+@Article{Rombach2017,
+  author        = {Rombach, P. and Porter, M. A. and Fowler, J. H. and Mucha, P. J.},
+  title         = {Core-Periphery Structure in Networks (Revisited)},
+  journal       = {SIAM Review},
+  year          = {2017},
+  volume        = {59},
+  number        = {3},
+  pages         = {619-646},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1137/17M1130046},
+  owner         = {Vincent},
+  timestamp     = {2018.11.08},
 }
 
 @Article{Rommel1994,
@@ -61132,6 +61372,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2020.08.13},
 }
 
+@Article{Tangherlini2020,
+  author    = {Tangherlini, T. R. and Shahsavari, S. and Shahbazi, B. and Ebrahimzadeh, E. and Roychowdhury, V.},
+  title     = {An automated pipeline for the discovery of conspiracy and conspiracy theory narrative frameworks: Bridgegate, Pizzagate and storytelling on the web},
+  journal   = {PLoS ONE},
+  year      = {2020},
+  volume    = {15},
+  number    = {6},
+  pages     = {e0233879},
+  doi       = {10.1371/journal.pone.0233879},
+  owner     = {Vincent},
+  timestamp = {2025.01.13},
+}
+
 @Article{Tanisik2016,
   author    = {Tanisik, G. and Zalluhoglu, C. and Ikizler-Cinbis, N.},
   title     = {Facial descriptors for human interaction recognition in still images},
@@ -63169,6 +63422,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2019.04.10},
 }
 
+@Article{Tuters2022,
+  author    = {Tuters, M. and Willaert, T.},
+  title     = {Deep state phobia: Narrative convergence in coronavirus conspiracism on Instagram},
+  journal   = {Convergence},
+  year      = {2022},
+  volume    = {28},
+  number    = {4},
+  pages     = {1214-1238},
+  doi       = {10.1177/13548565221118751},
+  owner     = {Vincent},
+  timestamp = {2025.01.13},
+}
+
 @Article{Tzanetakis2002,
   author    = {Tzanetakis, G. and Cook, P.},
   title     = {Musical genre classification of audio signals},
@@ -64829,6 +65095,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2019.04.09},
 }
 
+@Article{Walton2018,
+  author    = {Walton, S. S.},
+  title     = {The leaky canon: Constructing and policing heteronormativity in the Harry Potter fandom},
+  journal   = {Participation},
+  year      = {2018},
+  volume    = {15},
+  number    = {1},
+  pages     = {231-251},
+  owner     = {Vincent},
+  timestamp = {2025.01.13},
+  url       = {https://www.participations.org/15-01-13-walton.pdf},
+}
+
 @Article{Wamsley2019,
   author    = {Wamsley, E. J. and Stickgold, R.},
   title     = {Dreaming of a learning task is associated with enhanced memory consolidation: Replication in an overnight sleep study},
@@ -66323,6 +66602,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2020.07.22},
 }
 
+@Article{Willaert2023,
+  author    = {Willaert, T.},
+  title     = {A computational analysis of Telegram’s narrative affordances},
+  journal   = {PLoS ONE},
+  year      = {2023},
+  volume    = {18},
+  number    = {11},
+  pages     = {e0293508},
+  doi       = {10.1371/journal.pone.0293508},
+  owner     = {Vincent},
+  timestamp = {2025.01.13},
+}
+
 @Article{Willett1988,
   author    = {Willett, P.},
   title     = {Recent trends in hierarchic document clustering: A critical review},
@@ -66795,6 +67087,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   doi       = {10.1007/978-3-319-39020-8_18},
   owner     = {Vincent},
   timestamp = {2019.08.19},
+}
+
+@Article{Woledge2005,
+  author    = {Woledge, E.},
+  title     = {From Slash to the Mainstream: Female Writers and Gender Blending Men},
+  journal   = {Extrapolation},
+  year      = {2005},
+  volume    = {46},
+  number    = {1},
+  pages     = {50-65},
+  doi       = {10.3828/extr.2005.46.1.7},
+  owner     = {Vincent},
+  timestamp = {2025.01.13},
 }
 
 @InProceedings{Wolf2011,
@@ -68426,6 +68731,16 @@ https://hkim1596.github.io/shakespearean_character_network},
   doi       = {10.18653/v1/2021.nuse-1.2},
   owner     = {Vincent},
   timestamp = {2023.08.12},
+}
+
+@PhdThesis{Yoder2021a,
+  author      = {Yoder, M. M.},
+  title       = {Computational Models of Identity Presentation in Language},
+  year        = {2021},
+  institution = {Carnegie Mellon University},
+  owner       = {Vincent},
+  timestamp   = {2025.01.13},
+  url         = {https://www.lti.cs.cmu.edu/people/alumni/alumni-thesis/yoder-michael-miller-thesis.pdf},
 }
 
 @Article{Yonelinas2019,
