--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -7204,6 +7204,19 @@
   timestamp = {2019.04.10},
 }
 
+@Article{Bonney2015,
+  author    = {Bonney, R. and Phillips, T. B. and Ballard, H. L. and Enck, J. W.},
+  title     = {Can citizen science enhance public understanding of science?},
+  journal   = {Public Understanding of Science},
+  year      = {2015},
+  volume    = {25},
+  number    = {1},
+  pages     = {2-16},
+  doi       = {10.1177/0963662515607406},
+  owner     = {Vincent},
+  timestamp = {2025.01.14},
+}
+
 @InProceedings{Bontcheva2014,
   author    = {Bontcheva, K. and Roberts, I. and Derczynski, L. and Rout, D.},
   title     = {The GATE Crowdsourcing Plugin: Crowdsourcing Annotated Corpora Made Easy},
@@ -10227,6 +10240,16 @@
   doi       = {10.1007/978-3-030-58539-6_34},
   owner     = {Vincent},
   timestamp = {2023.03.16},
+}
+
+@Book{Caracciolo2021,
+  title     = {With bodies: Narrative theory and embodied cognition},
+  publisher = {Ohio State University Press},
+  year      = {2021},
+  author    = {Caracciolo, M. and Kukkonen, K.},
+  owner     = {Vincent},
+  timestamp = {2025.01.14},
+  url       = {https://ohiostatepress.org/books/titles/9780814214800.html},
 }
 
 @Article{Carbon2018,
@@ -16081,6 +16104,16 @@
   doi       = {10.1215/10407391-14-3-89},
   owner     = {Vincent},
   timestamp = {2021.12.27},
+}
+
+@InProceedings{Dobreva2014,
+  author    = {Dobreva, M. and Azzopardi, D.},
+  title     = {Citizen science in the humanities: a promise for creativity},
+  booktitle = {9th International Conference on Knowledge, Information and Creativity Support Systems},
+  year      = {2014},
+  owner     = {Vincent},
+  timestamp = {2025.01.14},
+  url       = {https://www.um.edu.mt/library/oar//handle/123456789/987},
 }
 
 @Article{Dobrow2011,
@@ -26164,6 +26197,19 @@
   timestamp = {2019.03.23},
 }
 
+@Article{Harmon2018,
+  author    = {Harmon, E. and Silberman, M. S.},
+  title     = {Rating Working Conditions on Digital Labor Platforms},
+  journal   = {Computer Supported Cooperative Work},
+  year      = {2018},
+  volume    = {27},
+  number    = {3-6},
+  pages     = {1275-1324},
+  doi       = {10.1007/s10606-018-9313-5},
+  owner     = {Vincent},
+  timestamp = {2025.01.14},
+}
+
 @Article{Harper2016,
   author    = {Harper, F. M. and Konstan, J. A.},
   title     = {The {MovieLens} Datasets: History and Context},
@@ -26757,6 +26803,19 @@
   owner     = {Vincent},
   timestamp = {2022.06.23},
   url       = {https://www.routledge.com/The-Organization-of-Behavior-A-Neuropsychological-Theory/Hebb/p/book/9780415654531},
+}
+
+@InCollection{Hecker2018,
+  author    = {Hecker, S. and Garbe, L. and Bonn, A.},
+  title     = {The European citizen science landscape - A snapshot},
+  booktitle = {Citizen Science: Innovation in Open Science, Society and Policy},
+  publisher = {Project Muse},
+  year      = {2018},
+  chapter   = {13},
+  pages     = {190-200},
+  doi       = {10.14324/111.9781787352339.13},
+  owner     = {Vincent},
+  timestamp = {2025.01.14},
 }
 
 @Article{HeeLinWang2006,
@@ -32718,6 +32777,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.cambridge.org/core/books/subverting-scotlands-past/3A5162B47490EA6DD81F900D6FD05833},
 }
 
+@Article{Kidd2016,
+  author    = {Kidd, D. and Ongis, M. and Castano, E.},
+  title     = {On literary fiction and its effects on theory of mind},
+  journal   = {Scientific Study of Literature},
+  year      = {2016},
+  volume    = {6},
+  number    = {1},
+  pages     = {42-58},
+  doi       = {10.1075/ssol.6.1.04kid},
+  owner     = {Vincent},
+  timestamp = {2025.01.14},
+}
+
 @InCollection{Kidnie2004,
   author    = {Kidnie, M. J.},
   title     = {The Staging of Shakespeare's Drama in Print Editions},
@@ -34098,6 +34170,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   doi       = {10.4135/9781526421036888175},
   owner     = {Vincent},
   timestamp = {2023.03.23},
+}
+
+@Article{Kosmala2016,
+  author    = {Kosmala, M. and Wiggins, A. and Swanson, A. and Simmons, B.},
+  title     = {Assessing data quality in citizen science},
+  journal   = {Frontiers in Ecology and the Environment},
+  year      = {2016},
+  volume    = {14},
+  number    = {10},
+  pages     = {551-560},
+  doi       = {10.1002/fee.1436},
+  owner     = {Vincent},
+  timestamp = {2025.01.14},
 }
 
 @Article{Kossinets2006,
@@ -41105,6 +41190,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2022.06.21},
 }
 
+@Article{Mar2006,
+  author    = {Mar, R. A. and Oatley, K. and Hirsh, J. and dela Paz, J. and Peterson, J. B.},
+  title     = {Bookworms versus nerds: Exposure to fiction versus non-fiction, divergent associations with social ability, and the simulation of fictional social worlds},
+  journal   = {Journal of Research in Personality},
+  year      = {2006},
+  volume    = {40},
+  number    = {5},
+  pages     = {694-712},
+  doi       = {10.1016/j.jrp.2005.08.002},
+  owner     = {Vincent},
+  timestamp = {2025.01.14},
+}
+
 @Article{Mar2008,
   author    = {Mar, R. A. and Oatley, K.},
   title     = {The Function of Fiction is the Abstraction and Simulation of Social Experience},
@@ -41116,6 +41214,32 @@ https://hkim1596.github.io/shakespearean_character_network},
   doi       = {10.1111/j.1745-6924.2008.00073.x},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@Article{Mar2009,
+  author    = {Mar, R. A. and Oatley, K. and Peterson, J. B.},
+  title     = {Exploring the link between reading fiction and empathy: Ruling out individual differences and examining outcomes},
+  journal   = {Communications},
+  year      = {2009},
+  volume    = {34},
+  number    = {4},
+  pages     = {407-428},
+  doi       = {10.1515/comm.2009.025},
+  owner     = {Vincent},
+  timestamp = {2025.01.14},
+}
+
+@Article{Mar2010,
+  author    = {Mar, R. A. and Tackett, J. L. and Moore, C.},
+  title     = {Exposure to media and theory-of-mind development in preschoolers},
+  journal   = {Cognitive Development},
+  year      = {2010},
+  volume    = {25},
+  number    = {1},
+  pages     = {69-78},
+  doi       = {10.1016/j.cogdev.2009.11.002},
+  owner     = {Vincent},
+  timestamp = {2025.01.14},
 }
 
 @Article{Mar2012,
@@ -50175,6 +50299,17 @@ https://hkim1596.github.io/shakespearean_character_network},
   url       = {https://txtlab.org/?p=611]},
 }
 
+@Article{Piper2016a,
+  author    = {Piper, A. and Portelance, E.},
+  title     = {How cultural capital works: Prizewinning novels, bestsellers, and the time of reading},
+  journal   = {Post45},
+  year      = {2016},
+  volume    = {10},
+  owner     = {Vincent},
+  timestamp = {2025.01.14},
+  url       = {https://post45.org/2016/05/how-cultural-capital-works-prizewinning-novels-bestsellers-and-the-time-of-reading/},
+}
+
 @InProceedings{Piper2017,
   author    = {Piper, A. and Algee-Hewitt, M. and Sinha, K. and Ruths, D. and Vala, H.},
   title     = {Studying literary characters and character networks},
@@ -50228,6 +50363,18 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2025.01.13},
 }
 
+@Article{Piper2022,
+  author    = {Piper, A.},
+  title     = {The {CONLIT} Dataset of Contemporary Literature},
+  journal   = {Journal of Open Humanities Data},
+  year      = {2022},
+  volume    = {8},
+  pages     = {24},
+  doi       = {10.5334/johd.88},
+  owner     = {Vincent},
+  timestamp = {2025.01.14},
+}
+
 @InProceedings{Piper2024,
   author    = {Piper, A. and Xu, M. and Ruths, D.},
   title     = {The Social Lives of Literary Characters: Combining citizen science and language models to understand narrative social networks},
@@ -50237,6 +50384,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   doi       = {10.18653/v1/2024.nlp4dh-1.45},
   owner     = {Vincent},
   timestamp = {2024.10.17},
+}
+
+@Article{Piper2024a,
+  author    = {Piper, A.},
+  title     = {What do characters do? The embodied agency of fictional characters},
+  journal   = {Journal of Computational Literary Studies},
+  year      = {2024},
+  volume    = {2},
+  number    = {1},
+  pages     = {1-12},
+  doi       = {10.48694/JCLS.3589},
+  owner     = {Vincent},
+  timestamp = {2025.01.14},
 }
 
 @Article{Pisinger1995,
@@ -52958,6 +53118,16 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2020.07.20},
 }
 
+@Book{Ridge2016,
+  title     = {Making digital history: The impact of digitality on public participation and scholarly practices in historical research},
+  publisher = {Open University},
+  year      = {2016},
+  author    = {Ridge, M.},
+  doi       = {10.21954/OU.RO.0000B1CF},
+  owner     = {Vincent},
+  timestamp = {2025.01.14},
+}
+
 @InProceedings{Rieck2016,
   author    = {Rieck, B. and Leitte, H.},
   title     = {'Shall I compare thee to a network?': Visualizing the Topological Structure of Shakespeare's Plays},
@@ -55563,6 +55733,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   doi       = {10.1109/cvpr.1997.609351},
   owner     = {Vincent},
   timestamp = {2019.03.31},
+}
+
+@Article{Sauermann2015,
+  author    = {Sauermann, H. and Franzoni, C.},
+  title     = {Crowd science user contribution patterns and their implications},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2015},
+  volume    = {112},
+  number    = {3},
+  pages     = {679-684},
+  doi       = {10.1073/pnas.1408907112},
+  owner     = {Vincent},
+  timestamp = {2025.01.14},
 }
 
 @Book{Saxegaard2010,
@@ -58932,6 +59115,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2019.03.27},
 }
 
+@Article{Sobchuk2016,
+  author    = {Sobchuk, O.},
+  title     = {The Evolution of Dialogues: A Quantitative Study of Russian Novels (1830-1900)},
+  journal   = {Poetics Today},
+  year      = {2016},
+  volume    = {37},
+  number    = {1},
+  pages     = {137-154},
+  doi       = {10.1215/03335372-3452643},
+  owner     = {Vincent},
+  timestamp = {2025.01.13},
+}
+
 @InProceedings{Socher2013,
   author    = {Socher, R. and Chen, D. and Manning, C. and Ng, A.},
   title     = {Reasoning with neural tensor networks for knowledge base completion},
@@ -58942,6 +59138,16 @@ https://hkim1596.github.io/shakespearean_character_network},
   owner     = {Vincent},
   timestamp = {2020.12.15},
   url       = {https://dl.acm.org/doi/10.5555/2999611.2999715},
+}
+
+@TechReport{Socientize2014,
+  author      = {{Socientize}},
+  title       = {Green paper on Citizen Science for Europe: Towards a society of empowered citizens and enhanced research},
+  institution = {Socientize},
+  year        = {2014},
+  owner       = {Vincent},
+  timestamp   = {2025.01.14},
+  url         = {https://digital-strategy.ec.europa.eu/en/library/green-paper-citizen-science-europe-towards-society-empowered-citizens-and-enhanced-research},
 }
 
 @InProceedings{Sokhn2013,
@@ -61919,6 +62125,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   owner     = {Vincent},
   timestamp = {2021.01.22},
   url       = {https://www.peterlang.com/view/title/72809},
+}
+
+@InCollection{Terras2015,
+  author    = {Terras, M.},
+  title     = {Crowdsourcing in the Digital Humanities},
+  booktitle = {A New Companion to Digital Humanities},
+  publisher = {Wiley},
+  year      = {2015},
+  chapter   = {29},
+  pages     = {420-438},
+  doi       = {10.1002/9781118680605.ch29},
+  owner     = {Vincent},
+  timestamp = {2025.01.14},
 }
 
 @Book{Tesniere1959,
@@ -66514,6 +66733,17 @@ https://hkim1596.github.io/shakespearean_character_network},
   url       = {https://arxiv.org/abs/1511.08198},
 }
 
+@InProceedings{Wiggins2016,
+  author    = {Wiggins, A. and He, Y.},
+  title     = {Community-based Data Validation Practices in Citizen Science},
+  booktitle = {19th ACM Conference on Computer-Supported Cooperative Work \& Social Computing},
+  year      = {2016},
+  pages     = {1548-1559},
+  doi       = {10.1145/2818048.2820063},
+  owner     = {Vincent},
+  timestamp = {2025.01.14},
+}
+
 @Article{Wijk2010,
   author    = {van Wijk, Bernadette C. M. and Stam, Cornelis J. and Daffertshofer, Andreas},
   title     = {Comparing Brain Networks of Different Size and Connectivity Density Using Graph Theory},
@@ -66587,6 +66817,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   owner     = {Vincent},
   timestamp = {2023.11.28},
   url       = {https://www.jstor.org/stable/24694545},
+}
+
+@Article{Wilkens2024,
+  author    = {Wilkens, M. and Evans, E. and Soni, S. and Bamman, D. and Piper, A.},
+  title     = {Small Worlds: Measuring the Mobility of Characters in English-Language Fiction},
+  journal   = {Journal of Computational Literary Studies},
+  year      = {2024},
+  volume    = {3},
+  number    = {1},
+  pages     = {1-16},
+  doi       = {10.48694/JCLS.3917},
+  owner     = {Vincent},
+  timestamp = {2025.01.14},
 }
 
 @Article{Wilkerson2015,
@@ -70635,6 +70878,16 @@ https://hkim1596.github.io/shakespearean_character_network},
   owner     = {Vincent},
   timestamp = {2023.08.12},
   url       = {https://www.jstor.org/stable/20107319},
+}
+
+@Book{Zunshine2006,
+  title     = {Why we read fiction: Theory of mind and the novel},
+  publisher = {Ohio State University Press},
+  year      = {2006},
+  author    = {Zunshine, L.},
+  owner     = {Vincent},
+  timestamp = {2025.01.14},
+  url       = {https://www.jstor.org/stable/j.ctt1kgqwk8},
 }
 
 @Article{Zunshine2008,
